# rust-rtl8710

./: .gitignore  README.md  application.mk  debug.sh  jlink.sh  libcompiler_builtins.txt  libfreertos.txt  ram_all.txt  rtl8710.ocd  rust.mk  start_openocd.sh  workspace.code-workspace
component/common/application/wigadget/: wigadget.c
component/soc/realtek/8195a/misc/gcc_utility/: rtl_gdb_debug.txt  rtl_gdb_debug_jlink.txt  rtl_gdb_flash_write.txt  rtl_gdb_flash_write_jlink.txt  rtl_gdb_flash_write_openocd.txt  rtl_gdb_ramdebug_jlink.txt  rtl_gdb_ramdebug_openocd.txt
log/: libcompiler_builtins.txt  libcore.txt
pi/: README.md  application.mk  emupi.cmd
pi/qemu-i386/lib/: libncurses.so.5.9  libtinfo.so.5.9
src/c/inc/: build_info.h
src/rust/: Cargo.toml  Xargo.toml
src/rust/src/: lib.rs
util/: fwsize.gdb
