[package]
name = "rustl8710"
version = "0.1.0"
authors = ["polyfractal <zach@zacharytong.com>"]

[dependencies]
# New version that fixes compilation:
freertos_rs = { git = "https://github.com/i404788/freertos.rs", rev = "d52f8b8695ee3c8d399d5e9e73e97908acf4dbf0" }

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
